<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ivos.quiz_app.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag3" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="31dp"
            android:inputType="text"
            android:hint="@string/name_request"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CZ_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cz_en"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginRight="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="36dp" />

    <TextView
        android:id="@+id/image_question_textbuton"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/Image_questions"
        android:textColor="@color/MainButtonsText"
        android:visibility="visible"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/text_question_textbuton"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:text="@string/Text_questions"
            android:textColor="@color/MainButtonsText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_question_textbuton"
            android:layout_width="0dp"
            android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/sound_question_textbuton"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Sound_questions"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question_textbuton" />

    <TextView
        android:id="@+id/total_score"
        style="@style/CategoryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/Total_score"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_question_textbuton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/image_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintBottom_toBottomOf="@+id/image_question_textbuton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_question_textbuton"
        app:layout_constraintVertical_bias="0.476"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintLeft_toLeftOf="@+id/image_question_textbuton"
        android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/image_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:gravity="center_horizontal"
            android:text="Score"
            android:textColor="@color/MainButtonsText"
            app:layout_constraintBottom_toTopOf="@+id/image_question_textbuton"
            app:layout_constraintRight_toRightOf="@+id/image_score_counter"
            app:layout_constraintLeft_toLeftOf="@+id/image_score_counter" />

    <TextView
        android:id="@+id/text_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintBottom_toBottomOf="@+id/text_question_textbuton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_question_textbuton"
        app:layout_constraintVertical_bias="0.523"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/text_question_textbuton"
        app:layout_constraintHorizontal_bias="0.727"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/sound_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintBottom_toBottomOf="@+id/sound_question_textbuton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sound_question_textbuton"
        app:layout_constraintVertical_bias="0.523"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/sound_question_textbuton"
        app:layout_constraintHorizontal_bias="0.73"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/total_score_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="0"
        android:textColor="@color/MainButtonsText"
        app:layout_constraintBottom_toBottomOf="@+id/total_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/total_score"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.476"
        app:layout_constraintLeft_toLeftOf="@+id/total_score"
        app:layout_constraintHorizontal_bias="0.724"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
